# libsnake

./: .clang-format  CMakeLists.txt  LICENSE  README.md  _config.yml  index.md
.github/workflows/: cmake.yml  cmake_tests.yml  doxygen.yml  publish.yml
bench/: data.js
benchmarks/: CMakeLists.txt  game_simulation.cpp
doc/: annotated.html  classes.html  classls_1_1FieldFlags-members.html  classls_1_1FieldFlags.html  classls_1_1FieldFlags.js  classls_1_1Gamemode-members.html  classls_1_1Gamemode.html  classls_1_1Gamemode.js  classls_1_1Gamemode__inherit__graph.md5  classls_1_1Move.js  classls_1_1Move_1_1Iterator-members.html  classls_1_1Move_1_1Iterator.html  classls_1_1Snake.html  classls_1_1SnakeFlags-members.html  classls_1_1SnakeFlags.html  classls_1_1State.html  classls_1_1State.js  classls_1_1gm_1_1ChallengeGamemode.html  classls_1_1gm_1_1ChallengeGamemode.js  classls_1_1gm_1_1ChallengeGamemode__coll__graph.map  classls_1_1gm_1_1SquadGamemode.js  classls_1_1gm_1_1SquadGamemode__coll__graph.md5  classls_1_1gm_1_1StandardGamemode__inherit__graph.md5  files.html  functions.html  functions_vars.html  index.html  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_3.map  inherit_graph_4.md5  inherit_graph_5.map  inherit_graph_6.map  inherit_graph_6.md5  inherit_graph_7.map  inherits.html  md__home_runner_work_libsnake_libsnake_docs_first_steps.html  move_8h_source.html  pages.html  (+3 more)
doc/html/: annotated_dup.js  classls_1_1Gamemode__inherit__graph.map  classls_1_1Move-members.html  classls_1_1Move.html  classls_1_1Snake-members.html  classls_1_1State-members.html  classls_1_1gm_1_1ChallengeGamemode__inherit__graph.md5  classls_1_1gm_1_1SquadGamemode-members.html  classls_1_1gm_1_1SquadGamemode.html  classls_1_1gm_1_1SquadGamemode__inherit__graph.map  classls_1_1gm_1_1StandardGamemode.html  classls_1_1gm_1_1StandardGamemode.js  classls_1_1gm_1_1StandardGamemode__coll__graph.map  classls_1_1gm_1_1StandardGamemode__coll__graph.md5  classls_1_1gm_1_1StandardGamemode__inherit__graph.map  definitions_8h_source.html  dir_49e56c817e5e54854c35e136979f97ca.html  functions_func.html  gamemode_8h_source.html  graph_legend.html  hierarchy.html  inherit_graph_0.map  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_5.md5  inherit_graph_7.md5  menudata.js  snake__flags_8h_source.html  state_8h_source.html
doc/html/search/: all_11.js  all_6.js  all_9.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_4.js  functions_b.js  searchdata.js  variables_7.js
doc/search/: all_0.js  all_1.js  all_10.js  all_4.js  all_8.js  classes_3.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_c.js  functions_d.js  related_0.js  variables_0.js  variables_1.js  variables_2.js  variables_4.js
docs/: first_steps.md
html/: challenge_8h_source.html  classls_1_1Gamemode.html  classls_1_1Move_1_1Iterator.js  classls_1_1Snake.js  classls_1_1SnakeFlags.js  classls_1_1gm_1_1ChallengeGamemode-members.html  classls_1_1gm_1_1ChallengeGamemode.html  classls_1_1gm_1_1SquadGamemode.html  classls_1_1gm_1_1StandardGamemode-members.html  classls_1_1gm_1_1StandardGamemode.html  dir_072fe410dfd135674b98543ab8edb9ed.html  dir_072fe410dfd135674b98543ab8edb9ed.js  dir_35a27d8ce9693bf41a57831077dcb06c.html  dir_35a27d8ce9693bf41a57831077dcb06c.js  files.html  files_dup.js  functions_rela.html  hierarchy.js  index.html  md__home_runner_work_libsnake_libsnake_docs_first_steps.html  menudata.js  navtreedata.js  navtreeindex0.js  position_8h_source.html  squad_8h_source.html  standard_8h_source.html  structls_1_1Position.html  util_8h_source.html
html/search/: all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  pages_0.js  related_0.js  searchdata.js  (+8 more)
include/: definitions.h  eval.h  gamemode.h  libsnake_api.h  move.h  position.h  snake.h  state.h  state_api.h  util.h  winner.h
include/gamemodes/: duel.h
include/libsnake/: definitions.h  gamemode.h  map.h  move.h  position.h  snake.h  snake_flags.h  state.h  util.h  winner.h
include/libsnake/gamemodes/: arena.h  challenge.h  duel.h  squad.h  standard.h
include/libsnake/maps/: arcade_maze.h  empty.h  standard.h
src/: definitions.cpp  eval.cpp  libsnake_api.cpp  map.cpp  snake_flags.cpp  state.cpp  state_api.cpp  winner.cpp
src/gamemodes/: arena.cpp  challenge.cpp  duel.cpp  squad.cpp  standard.cpp
src/maps/: arcade_maze.cpp
tests/: CMakeLists.txt  eval.cpp  move.cpp  position.cpp  snake_flags.cpp  state.cpp
tests/gamemodes/: arena.cpp  duel.cpp  squad.cpp  standard.cpp  wrapped.cpp
